# libtcrlm

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: publish_to_pypi.yaml  tests.yaml
src/libtcrlm/: __init__.py  batch_collator.py  bert.py  config_reader.py  dataloader.py  dataset.py  mlm_token_prediction_projector.py  self_attention_stack.py  vector_representation_delegate.py
src/libtcrlm/schema/: df_manipulation.py  exception.py  pmhc.py  tcr.py  tcr_pmhc_pair.py
src/libtcrlm/token_embedder/: __init__.py  blosum_embedding.py  cdr3_embedder.py  cdr_embedder.py  simple_relative_position_embedding.py
src/libtcrlm/tokeniser/: __init__.py  cdr3_tokeniser.py  cdr_tokeniser.py  tokeniser.py
tests/: conftest.py  test_bert.py  test_sin_position_embedding.py  test_tcr_dataloader.py  test_tcr_dataset.py  test_token_embedders.py  test_tokenisers.py
tests/resources/: bad_cdr3b.csv  bad_trav.csv
tests/test_schema/: test_df_manipulation.py  test_pmhc.py  test_tcr.py
tests/test_self_attention_stack/: test_self_attention_stack_with_builtins.py  test_self_attention_stack_with_initial_projection.py
tests/test_vector_representation_delegate/: test_average_pool_vector_representation_delegate.py  test_cls_vector_representation_delegate.py
