[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libtcrlm"
requires-python = ">=3.9"
authors = [
    {name = "Yuta Nagano", email = "yutanagano51@proton.me"}
]
maintainers = [
    {name = "Yuta Nagano", email = "yutanagano51@proton.me"}
]
description = "TCR language modelling library using Pytorch."
readme = "README.md"
keywords = ["TCR", "TR", "T cell", "transformer", "bert", "MLM", "immunology", "bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "blosum~=2.0",
    "pandas~=2.2",
    "torch~=2.2",
    "tidytcells~=2.1"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/yutanagano/libtcrlm"
Issues = "https://github.com/yutanagano/libtcrlm/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tox"
]

[tool.setuptools.dynamic]
version = {attr = "libtcrlm.VERSION"}
